# Camera

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  camera.ui  imagesettings.ui  videosettings.cpp  videosettings.ui
